Ops/k8s-auth.yaml
# AUTH SERVICE
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: grocersave-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: grocersave/auth-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8180
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: grocersave-dev
spec:
  ports:
  - port: 8180
  selector:
    app: auth-service
