Ops/k8s-bff.yaml
# 3. BFF SERVICE
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-service
  namespace: grocersave-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff-service
  template:
    metadata:
      labels:
        app: bff-service
    spec:
      containers:
      - name: bff-service
        image: grocersave/bff-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3100
---
apiVersion: v1
kind: Service
metadata:
  name: bff-service
  namespace: grocersave-dev
spec:
  ports:
  - port: 3100
  selector:
    app: bff-service
