Ops/k8s-catalog.yaml
# CATALOG SERVICE
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service
  namespace: grocersave-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-service
  template:
    metadata:
      labels:
        app: catalog-service
    spec:
      # Applying the DNS fix to the catalog service as well
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 10.100.0.10
        searches:
          - grocersave-dev.svc.cluster.local
          - svc.cluster.local
          - cluster.local
        options:
          - name: ndots
            value: "5"

      containers:
      - name: catalog-service
        image: grocersave/catalog-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8181
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: grocersave-dev
spec:
  ports:
  - port: 8181
  selector:
    app: catalog-service
