Ops/k8s-elasticsearch.yaml
# 5. ELASTICSEARCH (Search Engine)
# Single-node mode to save RAM
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: grocersave-dev
spec:
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.17.10
        ports:
        - containerPort: 9200
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: grocersave-dev
spec:
  ports:
  - port: 9200
  selector:
    app: elasticsearch
