Ops/k8s-frontend.yaml
# 2. FRONTEND
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: grocersave-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: grocersave/frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: grocersave-dev
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: frontend
