Ops/k8s-postgres.yaml
# 2. POSTGRES (Catalog/Auth DB)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: grocersave-dev
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: grocersave-dev
spec:
  ports:
  - port: 5432
  selector:
    app: postgres
