Ops/k8s-price.yaml
# PRICE SERVICE
apiVersion: apps/v1
kind: Deployment
metadata:
  name: price-service
  namespace: grocersave-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-service
  template:
    metadata:
      labels:
        app: price-service
    spec:
      # The incorrect dnsConfig has been removed.
      containers:
      - name: price-service
        image: grocersave/price-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8182
---
apiVersion: v1
kind: Service
metadata:
  name: price-service
  namespace: grocersave-dev
spec:
  ports:
  - port: 8182
  selector:
    app: price-service
