Ops/k8s-rabbitmq.yaml
# 3. RABBITMQ (Message Broker)
# Replaces Kafka to match the diagram
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: grocersave-dev
spec:
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management-alpine
        ports:
        - containerPort: 5672 # App port
        - containerPort: 15672 # UI port
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: grocersave-dev
spec:
  ports:
  - name: amqp
    port: 5672
  - name: management
    port: 15672
  selector:
    app: rabbitmq
