Ops/k8s-redis.yaml
# 1. REDIS (Cache)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: grocersave-dev
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: grocersave-dev
spec:
  ports:
  - port: 6379
  selector:
    app: redis
