Ops/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grocersave-ingress
  namespace: grocersave-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - grocersave.local
    secretName: grocersave-tls
  rules:
  - host: grocersave.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: bff-service
            port:
              number: 3100
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
